# Acme-Robotics-Human-Tracker

./: .gitignore  CMakeLists.txt  README.md  cppcheck_and_cpplint.sh  requirements.sh
.github/workflows/: build_and_coveralls  build_and_coveralls.yml
app/: CMakeLists.txt  Utils.cpp  cam_bot.cpp  detect.cpp  main.cpp  track.cpp
docs/: doxyfile
include/: Detector.hpp  Track.hpp  Utils.hpp  cam_bot.hpp  camera_bot.hpp  detect.hpp  draw_label.hpp  post_process.hpp  pre_process.hpp  track.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  main.cpp  test.cpp
